# Qwen-ML-AutoResearch

./: .gitignore  .qwenignore  QWEN.md  begin_experiment.py  goal.md  pyproject.toml  results.tsv
.qwen/: settings.json
.qwen/agents/: train-runner.md
.qwen/hooks/: pre_tool_use.py
.qwen/prompts/: init.md  loop.md
autoresearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiments/EXP-000001/: experiment.json
experiments/EXP-000002/: experiment.json
experiments/EXP-000003/: experiment.json
experiments/EXP-000004/: experiment.json
experiments/EXP-000005/: experiment.json
tools/paper-search-mcp-patched/: README.md  pyproject.toml
tools/paper-search-mcp-patched/paper_search_mcp/: server.py
tools/paper-search-mcp-patched/paper_search_mcp/academic_platforms/: arxiv.py  biorxiv.py  google_scholar.py  medrxiv.py  pubmed.py
tools/paper-search-mcp-patched/paper_search_mcp_patched.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/result-logger-mcp/: pyproject.toml
tools/result-logger-mcp/result_logger_mcp/: __init__.py  logger.py  server.py  test_runner.py
tools/result-logger-mcp/tests/: test_logger.py
tools/train-watchdog-mcp/: pyproject.toml
tools/train-watchdog-mcp/tests/: test_watchdog.py
tools/train-watchdog-mcp/train_watchdog_mcp/: __init__.py  server.py  test_runner.py  watchdog.py
training-lightning-hydra/: README.md
training-lightning-hydra/configs/: config.yaml.example  example.yaml  train.yaml
training-lightning-hydra/configs/model/: mnist_cnn.yaml  mnist_cnn_deep.yaml  mnist_cnn_wide.yaml
training-lightning-hydra/src/: eval.py  train.py
training-lightning-hydra/src/data/: example_datamodule.py  mnist_datamodule.py
training-lightning-hydra/src/data/components/: example_dataset.py  mnist_dataset.py
training-lightning-hydra/src/models/: example_module.py  mnist_module.py
training-lightning-hydra/src/models/components/: cnn_mnist.py  cnn_mnist_deep.py  cnn_mnist_wide.py
training-lightning-hydra/tests/: conftest.py  test_datamodules.py  test_orchestrator.py  test_qwen_runtime_policy.py  test_train.py
