[project]
name = "train-watchdog-mcp"
version = "0.1.0"
description = "Blocking MCP watchdog for Lightning-Hydra training runs"
requires-python = ">=3.10"
dependencies = [
  "fastmcp",
  "mcp[cli]>=1.6.0",
  "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["train_watchdog_mcp"]
